# hide-and-seek-goldeneye

./: .gitignore  ASSET_INTEGRATION_PLAN.md  DESIGN.md  DESIGN_BASE_SCALE.md  DESIGN_IDEAS.md  ENGINE_PORT_PLAN.md  dev-server.py  index.html  package-lock.json  package.json  run-dev.bat
native/: Cargo.toml  REFACTORING.md
native/assets/: test-guard.glb
native/assets/enemies/animations/: 00-idle.glb  01-fire-standing.glb  0E-hit-left-shoulder.glb  0F-hit-right-shoulder.glb  10-hit-left-arm.glb  11-hit-right-arm.glb  12-hit-left-hand.glb  13-hit-right-hand.glb  14-hit-left-leg.glb  15-hit-right-leg.glb  16-death-genitalia.glb  17-hit-neck.glb  18-death-neck.glb  19-death-stagger-back-to-wall.glb  1A-death-forward-face-down.glb  1B-death-forward-spin-face-up.glb  1C-death-backward-fall-face-up-1.glb  1D-death-backward-spin-face-down-right.glb  1E-death-backward-spin-face-up-right.glb  1F-death-backward-spin-face-down-left.glb  20-death-backward-spin-face-up-left.glb  21-death-forward-face-down-hard.glb  22-death-forward-face-down-soft.glb  23-death-fetal-position-right.glb  24-death-fetal-position-left.glb  25-death-backward-fall-face-up-2.glb  28-walking.glb  29-running.glb  2A-jogging.glb  36-hit-butt-long.glb  37-hit-butt-short.glb  38-death-head.glb  39-death-left-leg.glb  41-fire-standing-pistol.glb  7A-fire-standing-dual-wield.glb  81-hit-taser.glb
native/assets/enemies/characters/: russian-guard_karl.glb
native/assets/weapons/ar33/: gun.glb  muzzle.glb
native/assets/weapons/auto-shotgun/: gun.glb  muzzle.glb
native/assets/weapons/dd44/: gun.glb  muzzle.glb
native/assets/weapons/detonator/: gun.glb  muzzle.glb
native/assets/weapons/dk5/: gun.glb  muzzle.glb
native/assets/weapons/dk5-silencer/: gun.glb  muzzle.glb
native/assets/weapons/gold-pp7/: gun.glb
native/assets/weapons/golden-gun/: gun.glb  muzzle.glb
native/assets/weapons/grenade/: gun.glb
native/assets/weapons/grenade-launcher/: gun.glb  muzzle.glb
native/assets/weapons/kf7/: gun.glb  muzzle.glb
native/assets/weapons/klobb/: gun.glb  muzzle.glb
native/assets/weapons/laser/: gun.glb  muzzle.glb
native/assets/weapons/magnum/: gun.glb  muzzle.glb
native/assets/weapons/phantom/: gun.glb  muzzle.glb
native/assets/weapons/pp7/: gun.glb  muzzle.glb
native/assets/weapons/pp7-silencer/: gun.glb  muzzle.glb
native/assets/weapons/proximity-mine/: gun.glb
native/assets/weapons/rcp-90/: gun.glb  muzzle.glb
native/assets/weapons/remote-mine/: gun.glb
native/assets/weapons/rocket-launcher/: gun.glb
native/assets/weapons/shotgun/: gun.glb  muzzle.glb
native/assets/weapons/silver-pp7/: gun.glb  muzzle.glb
native/assets/weapons/sniper/: gun.glb
native/assets/weapons/timed-mine/: gun.glb
native/assets/weapons/zmgobj/: gun.glb  muzzle.glb
native/crates/csg/: Cargo.toml
native/crates/csg/src/: csg.rs  lib.rs
native/crates/engine/: Cargo.toml
native/crates/engine/src/: app.rs  audio.rs  camera.rs  character.rs  csg_runtime.rs  enemy.rs  geom.rs  gltf_load.rs  input.rs  lib.rs  mesh.rs  nav.rs  physics.rs  renderer.rs  shader.wgsl  shader_crosshair.wgsl  shader_door.wgsl  shader_entity.wgsl  shader_highlight.wgsl  shader_skinned.wgsl  structures.rs  textures.rs  uv_zones.rs  world.rs
native/crates/engine/src/assets/: gltf_load.rs  mod.rs  textured_model.rs
native/crates/engine/src/combat/: config.rs  mod.rs  shooting.rs  viewmodel.rs
native/crates/engine/src/geometry/: csg_runtime.rs  geom.rs  mod.rs  structures.rs
native/crates/engine/src/platform/: frame.rs  gamepad.rs  input.rs  mod.rs
native/crates/engine/src/render/: camera.rs  mesh.rs  mod.rs  renderer.rs  textures.rs  uv_zones.rs
native/crates/engine/src/sim/: mod.rs  nav.rs  physics.rs
native/crates/engine/src/skeletal/: anim.rs  anim_set.rs  clip.rs  gltf_skin.rs  mod.rs
native/crates/engine/src/world/: combat.rs  editing.rs  hunt.rs  lifecycle.rs  mod.rs  tests.rs
native/crates/game/: Cargo.toml
native/crates/game/src/: app.rs  character.rs  enemy.rs  gamepad.rs  lib.rs  main.rs
native/crates/game/src/combat/: config.rs  enemy_weapons.rs  explosives.rs  mod.rs  shooting.rs  viewmodel.rs
native/crates/game/src/hud/: font.rs  health.rs  mod.rs
src/: actions.js  (+4 more)
(+108 files in other folders)
