# BUILD & HIDE — native Rust engine port.
# See ../ENGINE_PORT_PLAN.md. The JS game (../src) stays as the design spec /
# behavioral regression oracle; nothing here deletes or depends on it.
[workspace]
resolver = "2"
members = ["crates/csg", "crates/engine", "crates/game"]

# Locked stack — pinned once here, consumed by member crates via `workspace = true`.
# Versions chosen for the Rust 1.92 toolchain (late-2025 ecosystem).
[workspace.dependencies]
glam = "0.29"
winit = "0.30"
wgpu = "24"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
gltf = { version = "1.4", features = ["import", "utils"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["bmp", "png", "jpeg"] }
rapier3d = "0.22"
env_logger = "0.11"
log = "0.4"
# Game-audio (kira): sound handles, per-instance volume, looping music, mixing;
# decodes wav (SFX) + mp3 (music) via symphonia. Default features already include
# the cpal backend + wav + mp3, so no feature list is needed.
kira = "0.12"
# Gamepad input (gilrs): cross-platform pad enumeration + button/axis events, used
# to wire the USB N64 controller (GoldenEye "solitaire" scheme). Windows backend is
# XInput-based — see crates/engine/src/platform/gamepad.rs for the mapping caveat.
gilrs = "0.11"

# Local crates.
csg = { path = "crates/csg" }
engine = { path = "crates/engine" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
